# plugins-tensorflow

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix-template.md  miscellaneous-template.md  new-feature-template.md  new-tests-template.md
.github/workflows/: deploy.yaml  test_integration.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
examples/: basic_integration.py  customised_integration.py  detailed_integration.py  example.py
simvue_template/: __init__.py  plugin.py
simvue_template/extras/: __init__.py
simvue_tensorflow/: plugin.py
simvue_tensorflow/extras/: __init__.py  create_alerts.py  operators.py
tests/: conftest.py
tests/integration/: test_tensorflow.py
tests/unit/: test_tensorflow_alerts.py  test_tensorflow_evaluate.py  test_tensorflow_fit.py
